--- a/web/wrangler.jsonc
+++ b/web/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   "name": "web",
-  "compatibility_date": "2026-01-19",
+  "compatibility_date": "2026-02-22",
   "assets": {
-    "directory": "./dist"
+    "directory": "./"
   }
 }
